<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fuzzy Words</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_words">Fuzzy Words Galore</string>
    <string name="update_string">Refurbish</string>
    <string name="search_hint">search words</string>
	<string name="searchable">res/xml/searchable.xml</string>
	<string name="search">search</string>
	<string name="TAG">sourabh</string>
	<string name="aTod">a - d</string>
	<string name="eToh">e - h</string>
	<string name="iTol">i - l</string>
	<string name="mTop">m - p</string>
	<string name="qTot">q - t</string>
	<string name="uToz">u - z</string>
	<string name="action_rate">Rate Us</string>
	<string name="action_share">Share</string>
	<string name="action_about">About Us</string>
</resources>
